--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Instalacja - Ikony Budynków</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
+        /* RESET I POPRAWKA SZEROKOŚCI */
+        * {
+            box-sizing: border-box;
+            -webkit-font-smoothing: antialiased;
+        }
+
         :root {
             --primary: #2563eb;
             --primary-hover: #1d4ed8;
@@ -25,16 +31,15 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            padding: 24px;
-            box-sizing: border-box;
+            padding: 20px;
         }
 
         .container {
             background: var(--card-bg);
-            padding: 4rem 2.5rem;
+            padding: 3rem 2rem;
             border-radius: 32px;
             box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
-            max-width: 440px;
+            max-width: 400px;
             width: 100%;
             border: 1px solid rgba(255, 255, 255, 0.1);
             display: flex;
@@ -43,19 +48,19 @@
         }
 
         .icon-box {
-            width: 84px;
-            height: 84px;
+            width: 80px;
+            height: 80px;
             background: var(--primary);
-            border-radius: 24px;
-            margin-bottom: 2rem;
+            border-radius: 22px;
+            margin-bottom: 1.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 10px 25px rgba(37, 99, 235, 0.4);
+            box-shadow: 0 10px 20px rgba(37, 99, 235, 0.3);
         }
 
         h1 {
-            font-size: 2.25rem;
+            font-size: 2rem;
             font-weight: 800;
             margin: 0;
             text-align: center;
@@ -65,116 +70,92 @@
         .version {
             color: var(--text-muted);
             font-size: 0.8125rem;
-            margin-top: 0.75rem;
-            margin-bottom: 2.5rem;
+            margin-top: 0.5rem;
+            margin-bottom: 2rem;
             background: rgba(255, 255, 255, 0.05);
-            padding: 0.4rem 1.1rem;
+            padding: 0.35rem 0.9rem;
             border-radius: 99px;
             font-weight: 700;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
-            border: 1px solid rgba(255, 255, 255, 0.05);
         }
 
         .desc {
             color: var(--text-muted);
-            margin-bottom: 3rem;
-            line-height: 1.6;
-            font-size: 1rem;
+            margin-bottom: 2.5rem;
+            line-height: 1.5;
+            font-size: 0.9375rem;
             text-align: center;
         }
 
-        /* PERFEKCYJNIE WYCENTROWANY PRZYCISK */
+        /* PRZYCISK: TERAZ JUŻ NIE WYSTAJE */
         .btn {
+            position: relative;
             background-color: var(--primary);
             color: white;
             text-decoration: none;
-            height: 64px;
-            border-radius: 18px;
+            height: 60px;
+            border-radius: 15px;
             font-weight: 700;
             font-size: 1.125rem;
             transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
             width: 100%;
             display: flex;
             align-items: center;
+            justify-content: center;
             border: none;
-            box-shadow: 0 8px 20px rgba(37, 99, 235, 0.3);
-            cursor: pointer;
-            padding: 0;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
         }
 
-        /* 3 RÓWNE KOLUMNY: BUFOR | TEKST | BUFOR */
-        .btn-content {
-            display: grid;
-            grid-template-columns: 50px 1fr 50px;
-            width: 100%;
-            align-items: center;
-        }
-
+        /* RAKIETA PŁYWAJĄCA: NIE PRZESUWA TEKSTU */
         .btn-emoji {
-            font-size: 1.3rem;
-            justify-self: center;
-        }
-
-        .btn-text {
-            text-align: center;
-            justify-self: center;
+            position: absolute;
+            left: 20px;
+            font-size: 1.25rem;
         }
 
         .btn:hover {
             background-color: var(--primary-hover);
             transform: translateY(-2px);
-            box-shadow: 0 12px 30px rgba(37, 99, 235, 0.4);
-        }
-
-        .btn:active {
-            transform: translateY(0);
+            box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
         }
 
         .steps {
-            margin-top: 3.5rem;
+            margin-top: 2.5rem;
             width: 100%;
             display: flex;
             flex-direction: column;
-            gap: 1.25rem;
+            gap: 1.125rem;
         }
 
         .step {
             display: flex;
             align-items: flex-start;
-            gap: 1.125rem;
-            text-align: left;
-            font-size: 0.9375rem;
+            gap: 0.75rem;
+            font-size: 0.875rem;
             color: var(--text-muted);
         }
 
         .step-num {
             background: rgba(255, 255, 255, 0.1);
             color: var(--text);
-            width: 26px;
-            height: 26px;
-            border-radius: 8px;
+            width: 24px;
+            height: 24px;
+            border-radius: 6px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 0.8125rem;
-            font-weight: 900;
+            font-size: 0.75rem;
+            font-weight: 800;
             flex-shrink: 0;
-            margin-top: 2px;
-        }
-
-        .step b {
-            color: var(--text);
-            font-weight: 700;
         }
 
         .footer {
-            margin-top: 3.5rem;
-            padding-top: 2rem;
+            margin-top: 3rem;
+            padding-top: 1.5rem;
             border-top: 1px solid rgba(255, 255, 255, 0.05);
             width: 100%;
             text-align: center;
-            font-size: 0.8125rem;
+            font-size: 0.75rem;
             color: var(--text-muted);
         }
 
@@ -184,19 +165,14 @@
             font-weight: 600;
         }
 
-        a.link:hover {
-            text-decoration: underline;
-        }
-
-        /* Glow effect */
         .bg-glow {
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 60vw;
-            height: 60vw;
-            background: radial-gradient(circle, rgba(37, 99, 235, 0.1) 0%, rgba(15, 23, 42, 0) 70%);
+            width: 100vw;
+            height: 100vh;
+            background: radial-gradient(circle, rgba(37, 99, 235, 0.05) 0%, transparent 70%);
             z-index: -1;
             pointer-events: none;
         }
@@ -208,7 +184,7 @@
 
     <div class="container">
         <div class="icon-box">
-            <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
+            <svg width="36" height="36" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
                 stroke-linecap="round" stroke-linejoin="round">
                 <path
                     d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
@@ -221,33 +197,30 @@
         <h1>Ikony Budynków</h1>
         <div class="version">v2.2.1 • Operator Ratunkowy</div>
 
-        <p class="desc">Instalator zestawu customowych ikon.<br>Kliknij przycisk poniżej, aby dodać je do gry.</p>
+        <p class="desc">Instalator zestawu ikon.<br>Kliknij przycisk, aby dodać do gry.</p>
 
         <a href="https://raw.githubusercontent.com/Adixx1337/ikonki/main/src/ikony-budynkow.user.js" class="btn">
-            <div class="btn-content">
-                <span class="btn-emoji">🚀</span>
-                <span class="btn-text">Zainstaluj skrypt</span>
-                <span class="btn-spacer"></span>
-            </div>
+            <span class="btn-emoji">🚀</span>
+            <span class="btn-text">Zainstaluj skrypt</span>
         </a>
 
         <div class="steps">
             <div class="step">
                 <div class="step-num">1</div>
-                <div>Zainstaluj rozszerzenie <b>Tampermonkey</b> w przeglądarce.</div>
+                <div>Zainstaluj rozszerzenie <b>Tampermonkey</b>.</div>
             </div>
             <div class="step">
                 <div class="step-num">2</div>
-                <div>Kliknij niebieski przycisk <b>Zainstaluj skrypt</b> powyżej.</div>
+                <div>Kliknij <b>Zainstaluj skrypt</b> powyżej.</div>
             </div>
             <div class="step">
                 <div class="step-num">3</div>
-                <div>Potwierdź instalację przyciskiem <b>Instaluj</b> w oknie skryptu.</div>
+                <div>Kliknij <b>"Instaluj"</b> w oknie skryptu.</div>
             </div>
         </div>
 
         <div class="footer">
-            🎨 Adixx1337 • <a href="https://github.com/Adixx1337/ikonki" class="link">Projekt na GitHub</a>
+            🎨 Adixx1337 • <a href="https://github.com/Adixx1337/ikonki" class="link">Projekt GitHub</a>
         </div>
     </div>
 </body>
