--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             text-align: center;
         }
 
-        .icon-box {
+        .icon {
             width: 72px;
             height: 72px;
             background: #2563eb;
@@ -51,7 +51,6 @@
             font-size: 1.75rem;
             font-weight: 800;
             margin-bottom: 0.5rem;
-            letter-spacing: -0.025em;
         }
 
         .version {
@@ -62,20 +61,10 @@
             background: rgba(255, 255, 255, 0.05);
             padding: 0.35rem 0.75rem;
             border-radius: 20px;
-            font-weight: 600;
         }
 
-        .desc {
-            color: #94a3b8;
-            margin-bottom: 2.5rem;
-            line-height: 1.5;
-            font-size: 0.9375rem;
-        }
-
-        /* PRZYCISK CZYSZCZONY ZE WSZYSTKIEGO */
-        .btn-wrapper {
-            padding: 0 10px;
-            /* Margines bezpieczeństwa wewnątrz karty */
+        .btn-box {
+            padding: 0 5px;
             width: 100%;
         }
 
@@ -87,11 +76,11 @@
             padding: 18px 0;
             border-radius: 12px;
             font-weight: 700;
-            font-size: 1.0625rem;
-            transition: background 0.2s, transform 0.2s;
+            font-size: 1.1rem;
+            transition: 0.2s;
             width: 100%;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             border: none;
+            cursor: pointer;
         }
 
         .btn:hover {
@@ -106,14 +95,13 @@
 
         .step {
             display: flex;
-            align-items: flex-start;
             gap: 12px;
             margin-bottom: 12px;
             font-size: 0.875rem;
             color: #94a3b8;
         }
 
-        .step-num {
+        .num {
             background: rgba(255, 255, 255, 0.1);
             color: white;
             width: 22px;
@@ -122,9 +110,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 0.75rem;
-            font-weight: 800;
             flex-shrink: 0;
+            font-weight: 800;
         }
 
         .footer {
@@ -134,18 +121,13 @@
             font-size: 0.75rem;
             color: #94a3b8;
         }
-
-        a.link {
-            color: #2563eb;
-            text-decoration: none;
-        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="icon-box">
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"
+        <div class="icon">
+            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2.5"
                 stroke-linecap="round" stroke-linejoin="round">
                 <path
                     d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
@@ -154,36 +136,34 @@
                 <line x1="12" y1="22.08" x2="12" y2="12"></line>
             </svg>
         </div>
-
         <h1>Ikony Budynków</h1>
         <div class="version">v2.2.1 • Operator Ratunkowy</div>
+        <p style="color: #94a3b8; margin-bottom: 2.5rem; font-size: 0.9rem;">Kliknij poniższy przycisk, aby
+            automatycznie zainstalować zestaw ikon we wtyczce Tampermonkey.</p>
 
-        <p class="desc">Zainstaluj skrypt, aby podmienić ikony budynków na mapie w grze.</p>
-
-        <div class="btn-wrapper">
-            <a href="https://raw.githubusercontent.com/Adixx1337/ikonki/main/src/ikony-budynkow.user.js" class="btn">
+        <div class="btn-box">
+            <!-- NOWY LINK JSDELIVR - Wymusza rozpoznanie przez wtyczkę -->
+            <a href="https://cdn.jsdelivr.net/gh/Adixx1337/ikonki@main/src/ikony-budynkow.user.js" class="btn">
                 Zainstaluj skrypt
             </a>
         </div>
 
         <div class="steps">
             <div class="step">
-                <div class="step-num">1</div>
-                <div>Zainstaluj rozszerzenie <b>Tampermonkey</b>.</div>
+                <div class="num">1</div>
+                <div>Upewnij się, że masz włączony <b>Tampermonkey</b>.</div>
             </div>
             <div class="step">
-                <div class="step-num">2</div>
-                <div>Kliknij niebieski przycisk powyżej.</div>
+                <div class="num">2</div>
+                <div>Kliknij <b>Zainstaluj skrypt</b>.</div>
             </div>
             <div class="step">
-                <div class="step-num">3</div>
-                <div>Potwierdź instalację w oknie, które się pojawi.</div>
+                <div class="num">3</div>
+                <div>Pojawi się czarne okno instalacji — wybierz <b>Instaluj</b>.</div>
             </div>
         </div>
-
-        <div class="footer">
-            🎨 Adixx1337 • <a href="https://github.com/Adixx1337/ikonki" class="link">Kod na GitHub</a>
-        </div>
+        <div class="footer">🎨 Adixx1337 • <a href="https://github.com/Adixx1337/ikonki"
+                style="color: #2563eb; text-decoration: none;">GitHub</a></div>
     </div>
 </body>
 
